Fixed get methods to use @PathVariable, Fixed unexpected error with logging.
