# src/main/java/com/epam/wca/gym/controller/TraineeController.java
@@ -24,6 +24,7 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -43,9 +44,9 @@ public class TraineeController {
     @NonNull
     private TrainerService trainerService;
 
-    @GetMapping("/profile")
+    @GetMapping("/profile/{username}")
     public ResponseEntity<TraineeSendDTO> getTraineeProfile(
-            @RequestParam("username") String username,
+            @PathVariable("username") String username,
             HttpServletRequest request
     ) {
         User authenticatedUser = (User) request.getAttribute("authenticatedUser");
